# orchestrator_rough

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  code_review.md  docker-compose.override.yml  docker-compose.yml  prometheus.yml  pyproject.toml  requirements.txt
microservices/llm-phraser/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  requirements-dev.txt  requirements.txt
microservices/llm-phraser/app/: llm_client.py  main.py  prompt_templates.py  schemas.py
microservices/llm-phraser/tests/: test_phraser.py
microservices/nlu-service/: Dockerfile  pyproject.toml  requirements.txt
microservices/nlu-service/app/: compile_nlu.py  dspy_nlu.py  llm_nlu.py  main.py  nlu_compiled.json  schemas.py
microservices/strategy-engine/: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt  test_full_negotiation.py
microservices/strategy-engine/app/: main.py  schemas.py  strategy_core.py
microservices/strategy-engine/tests/: test_edge_cases.py  test_strategy.py
orchestrator/: Dockerfile  main.py  session_schemas.py
orchestrator/graph/: nodes.py  state.py  workflow.py
orchestrator/lib/: ai_agent.py  backend_client.py  brain_client.py  circuit_breaker.py  cli_demo.py  dummy_analytics.py  http_pool.py  ms5_client.py  nlu_client.py  phraser_client.py  state_manager.py
