[project]
name = "orchestrator"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "fastapi (>=0.120.2,<0.121.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "redis (>=7.0.1,<8.0.0)",
    "langgraph (>=1.0.7,<2.0.0)",
    "langchain-core (>=1.2.7,<2.0.0)",
    "slowapi (>=0.1.9,<1.0.0)",
    "tenacity (>=8.0.0,<10.0.0)",
    "gunicorn (>=21.0.0,<24.0.0)",
    "prometheus-fastapi-instrumentator (>=7.0.0,<8.0.0)"
]

[tool.poetry]
packages = [{include = "orchestrator", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
