[tool.poetry]
name = "nlu-service"
version = "0.1.0"
description = "Simple NLU microservice"
authors = ["Ashna <ashna@example.com>"]
package-mode = false   # 👈 THIS DISABLES PACKAGE MODE

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.0"
uvicorn = "^0.29.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
